<resources>
    <string name="app_name">Broker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--Titles-->
    <string name="title_deals_pipeline">Deals Pipeline</string>
    <string name="title_performance_comparison">Performance Comparison</string>
    <string name="title_deals_funded">Deals Funded</string>


    <!--Dasboard strings-->
    <string name="dashboard">Dashboard</string>
    <string name="deal_pipeline">Deals\nPipeline</string>
    <string name="performance_comparison">Performance\nComparison</string>
    <string name="deals_funded">Deals\nFunded</string>
    <string name="select">Select</string>
    <string name="deal_pipeline_instruction">Take control of your pipeline and fund more deals. View every application and their status below.</string>
    <string name="performance_comparison_instruction">Compare your performance between any two time periods</string>
    <string name="deals_funded_instruction">See how many deals you have closed and for what amount.</string>
    <string name="select_time_range">Select Time Range</string>
    <string name="compare_with">Compare with</string>
    <string name="current_month">Current Month</string>
    <string name="current_quarter">Current Quarter</string>

    <!--error messages-->
    <string name="error_valid_mail_phone_number">Please enter a valid email or Phone number</string>
    <string name="error_valid_mail">Please enter a valid email address</string>
    <string name="error_password">Please enter valid password</string>
    <string name="error_business_name">Please enter buniness name</string>
    <string name="error_mobile_number">Please enter your valid mobile number</string>
    <string name="error_confirm_password">Please enter confirm Password</string>
    <string name="error_pin">Please enter your pin</string>
    <string name="error_old_pin">Please enter your old Pin</string>
    <string name="error_new_pin">Please enter new pin</string>
    <string name="error_confirm_pin">Please enter confirm pin</string>
    <string name="error_password_confirm_password">password and confirm password not matched</string>
    <string name="error_pin_confirm_pin">pin and confirm pin not matchd</string>

    <!--Loging screen-->
    <string name="mca_protect_message">\u00a9 2017 MCA Protect All right reserved</string>
    <string name="privacy_message">privacy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="aboutus_message">About Us</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="login">Login</string>
    <string name="remember_password">Remember my password</string>

    <!--forgot password-->
    <string name="reset_password">Reset Password</string>
    <string name="email_number_field">email id / mobile number</string>
    <string name="mailid_message">Enter your registered email id / mobile number</string>
    <string name="popup_confirm_mail_message">An email with a confirmation link has been send to %1$s for resetting your password.</string>

    <!--registration-->
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="business_name">Business Name</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok_button">OK</string>
    <string name="continue_button">Continue</string>
    <string name="popup_sucess_message">An email with an activation link has been sent to your email id, please check and activate your account</string>

    <!--new password-->
    <string name="password_combination_message">(Password must be a combination of a-z, A-Z or 0-9)</string>
    <string name="change_password">Change Password</string>

    <!---->
    <string name="about_us_title">About Us</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="tc_title">Terms &amp; Conditions</string>

    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>

    <!--mPin-->
    <string name="change_mpin">Change mPIN</string>
    <string name="forgot_mpin">Forgot mPIN</string>
    <string name="mPIN_title">Enter your mPIN to login</string>

    <!--set mpin-->
    <string name="enter_your_old_mpin">Enter your old PIN</string>
    <string name="new_mpin">New mPIN</string>
    <string name="confirm_mpin">Confirm mPIN</string>
    <string name="set_pin">Set PIN</string>
    <string name="set_mpin_sucess_message">your new mPIN is set Sucessfully</string>
    <string name="mailid_hint">email id</string>
    <string name="reset_mpin">Reset mPIN</string>
    <string name="reset_mpin_message">Enter a 4-Digit PIN to help prevent other people from using this app</string>
    <string name="set_newmpin_title">Set new mPIN</string>
    <string name="mpin_message_title">(Mobile Persional Identification Number)</string>
    <string name="skip_text">Skip</string>


    <!--dialog -->
    <string name="alert_dismiss">Do u really want to exit from the application ?</string>
    <string name="yes_textview">Yes</string>
    <string name="no_textview">No</string>

    <!--Sidemenu-->
    <string name="sidemenu_dashboard">Dashboard</string>
    <string name="sidemenu_merchant_application">Merchant Application</string>
    <string name="sidemenu_saved_application">Saved Application</string>
    <string name="sidemenu_funding_program">Funding Programa</string>
    <string name="sidemenu_communication">Communicaation</string>
    <string name="sidemenu_logout">Logout</string>
    <string name="sidemenu_version">Version</string>

    <string name="sidemenu_notification">Notification</string>
    <string name="sidemenu_settings">Personalized Settings</string>
    <string name="sidemenu_aboutus">About Us</string>
    <string name="sidemenu_terms_ofuse">Terms of Use</string>
    <string name="sidemenu_privacy_policy">Privacy Policy</string>
    <string name="sidemenu_feedback">Share Feedback</string>
    <string name="sidemenu_shareapp">Share App</string>
    <string name="sidemenu_rateus">Rate US</string>

    <!--myprofile-->
    <string name="save_button">Save</string>
    <string name="name">Name</string>

</resources>
