<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/footer" />

    <include layout="@layout/layout_error_banner" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/header_to_icon_space">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/loginscreen_left_margin"
            android:layout_marginRight="@dimen/loginscreen_right_margin"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="45dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/header_to_icon_space"
                android:background="@drawable/login_logo" />

            <TextView
                android:id="@+id/setpin_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/appicon_to_title_space"
                android:text="@string/set_newmpin_title"
                android:textColor="@color/app_red"
                android:textSize="@dimen/screen_title_textsize" />

            <TextView
                android:id="@+id/mpin_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top_padding_10dp"
                android:text="@string/mpin_message_title"
                android:textColor="@color/app_gray_80_percent"
                android:textSize="@dimen/mpin_textsize" />

            <TextView
                android:id="@+id/message_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/textview_space"
                android:text="@string/reset_mpin_message"
                android:textColor="@color/app_gray_80_percent"
                android:textSize="@dimen/screen_message_textsize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_to_edittext_textview_space"
                android:text="@string/new_mpin"
                android:textColor="@color/app_blue_60_percent"
                android:textSize="@dimen/screen_message_textsize" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_to_icon_space"
                android:orientation="horizontal">

                <org.mcaprotect.broker.utils.PinEntryView
                    android:id="@+id/newpin_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"

                    app:accentType="all"
                    app:digitElevation="15dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_mpin"
                android:textColor="@color/app_blue_60_percent"
                android:textSize="@dimen/screen_message_textsize" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/header_to_icon_space"
                android:orientation="horizontal">

                <org.mcaprotect.broker.utils.PinEntryView
                    android:id="@+id/confirm_newpin_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"

                    app:accentType="all"
                    app:digitElevation="15dp" />

            </RelativeLayout>

            <Button
                android:id="@+id/setpin_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginscreen_margin_top"
                android:background="@drawable/custom_button"
                android:text="@string/set_pin"
                android:textAllCaps="false"
                android:textColor="@color/white_color"
                android:textSize="@dimen/button_textsize" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>







