<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/header_navigation"
        android:visibility="invisible" />

    <include layout="@layout/footer" />

    <include layout="@layout/layout_error_banner" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/about_us_holder"
        android:layout_below="@+id/header"
        android:layout_marginLeft="@dimen/loginscreen_left_margin"
        android:layout_marginRight="@dimen/loginscreen_right_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginscreen_margin_top"
                android:background="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/login_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginscreen_margin_top"
                android:text="Login" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginscreen_margin_top">

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="email id"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loginscreen_margin_top">

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="password"
                    android:inputType="textVisiblePassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/loginscreen_margin_top"
                android:background="@drawable/btn_message"
                android:text="@string/login"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/footer_height"
                android:layout_above="@+id/footer"
                android:layout_marginTop="@dimen/loginscreen_margin_top">

                <TextView
                    android:id="@+id/forgot_password_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="left|center"
                    android:text="@string/forgot_password" />

                <TextView
                    android:id="@+id/new_user_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:text="@string/new_user" />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/about_us_holder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:layout_above="@+id/footer"
        android:layout_marginLeft="@dimen/loginscreen_left_margin"
        android:layout_marginRight="@dimen/loginscreen_right_margin"
        android:layout_marginTop="@dimen/loginscreen_margin_top">

        <TextView
            android:id="@+id/about_us_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/aboutus_message" />

        <TextView
            android:id="@+id/terms_conditions_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/terms_conditions" />

        <TextView
            android:id="@+id/privacy_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/privacy_message" />

    </LinearLayout>
</RelativeLayout>
