<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/header_navigation" />

    <include layout="@layout/footer" />

    <include layout="@layout/layout_error_banner" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/loginscreen_left_margin"
            android:layout_marginRight="@dimen/loginscreen_right_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/header_to_icon_space"
                android:background="@drawable/login_logo" />

            <TextView
                android:id="@+id/forgot_password_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/appicon_to_title_space"
                android:text="@string/forgot_password"
                android:textColor="@color/app_red"
                android:textSize="@dimen/screen_title_textsize" />

            <TextView
                android:id="@+id/emailid_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/textview_space"
                android:text="@string/mailid_message"
                android:textColor="@color/app_gray_80_percent"
                android:textSize="@dimen/screen_message_textsize" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_padding_10dp">

                <EditText
                    android:id="@+id/mail_number_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_number_field"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/reset_password_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/textview_space"
                android:background="@drawable/custom_button"
                android:paddingLeft="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/white_color"
                android:textSize="@dimen/button_textsize" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
